# gamebus-campaign-assistant

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  app.py  app_config.json  app_config.py  app_storage.py  campaign_downloader.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
checker_wrapper/: checker_wrapper.py
config/: app_config.json
docs/: Intervention mapping.xlsx  installation-windows.md  legacy-checker.md  pilot_feedback_template.docx  ttm-checks.md  user-guide.md
legacy_checker/: README.md  requirements.txt
metadata/: campaign_profile.json  theory_registry.json
samples/: campaign-HW8 Children Long Term.xlsx  example_campaign-HW8 BIPS pilot.xlsx  example_campaign-HW8 YA HB.xlsx  test_campaign-HW8 BIPS_1702.xlsx  test_campaign-HW8 YA HB_0403.xlsx
scripts/: install_windows.bat  run_app.bat
tests/: conftest.py  test_downloader.py  test_explainers.py  test_points_split_backend.py  test_prioritization.py  test_session_logging.py  test_storage.py  test_ui_assistant_guide.py  test_ui_assistant_page_status.py  test_ui_chat.py  test_ui_check_picker.py  test_ui_check_picker_selection.py  test_ui_compact_panel_modes.py  test_ui_copy.py  test_ui_findings_overview.py  test_ui_findings_page_structure.py  test_ui_fix_proposal_helpers.py  test_ui_labels.py  test_ui_overview.py  test_ui_overview_navigation.py  test_ui_privacy_setup.py  test_ui_setup.py  test_ui_setup_order_intent.py  test_ui_setup_status.py  test_ui_sidebar.py  test_ui_status_models.py  test_ui_workflow_page_copy.py  test_ui_workspace_readiness.py  test_ui_workspace_status.py  (+2 more)
(+127 files in other folders)
