[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamebus-campaign-assistant"
version = "0.1.0"
description = "A local Streamlit assistant for checking GameBus campaign Excel exports."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Olga Glazunova" }
]
keywords = [
  "gamebus",
  "campaigns",
  "streamlit",
  "health",
  "excel",
  "checker"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows"
]

dependencies = [
  "streamlit>=1.36",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "xlsxwriter>=3.2",
  "language-tool-python>=3.3",
  "requests>=2.32",
  "keyring>=25.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]